[gd_scene load_steps=20 format=3 uid="uid://doc270023clpu"]

[ext_resource type="Script" path="res://ENEMIES/1_COMUN/GUARDIA/SCRIPTS/Turret.gd" id="1_ovdhf"]
[ext_resource type="PackedScene" uid="uid://c7bd8sgybcou7" path="res://ENEMIES/1_COMUN/GUARDIA/SCENES/bullets.tscn" id="2_purvd"]
[ext_resource type="Texture2D" uid="uid://d70mujxghaqv" path="res://ENEMIES/1_COMUN/GUARDIA/ASSET/Skotadi guardia-(Muerte)-Sheet-sheet.png" id="3_17hku"]
[ext_resource type="Shader" uid="uid://c0oucq73jqjbu" path="res://GLOBAL/VFX/ASSETS/minero.tres" id="3_sqfgb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d51hs"]
radius = 17.8885

[sub_resource type="CircleShape2D" id="CircleShape2D_tey2p"]
radius = 113.442

[sub_resource type="Animation" id="Animation_6urff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 5)]
}

[sub_resource type="Animation" id="Animation_xmnma"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0), Vector2i(15, 0), Vector2i(16, 0), Vector2i(17, 0), Vector2i(18, 0), Vector2i(19, 0), Vector2i(20, 0), Vector2i(21, 0), Vector2i(22, 0), Vector2i(23, 0), Vector2i(24, 0), Vector2i(25, 0), Vector2i(26, 0), Vector2i(27, 0), Vector2i(28, 0), Vector2i(29, 0), Vector2i(30, 0)]
}

[sub_resource type="Animation" id="Animation_htlwg"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 5), Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_3k7sb"]
resource_name = "shoot_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="Animation" id="Animation_1ws36"]
resource_name = "shoot_side"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_0eh8b"]
resource_name = "shoot_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}

[sub_resource type="Animation" id="Animation_0sxw3"]
resource_name = "walkk"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(11, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btdx2"]
_data = {
"RESET": SubResource("Animation_6urff"),
"death": SubResource("Animation_xmnma"),
"idle": SubResource("Animation_htlwg"),
"shoot_down": SubResource("Animation_3k7sb"),
"shoot_side": SubResource("Animation_1ws36"),
"shoot_up": SubResource("Animation_0eh8b"),
"walkk": SubResource("Animation_0sxw3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_srjnj"]
height = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v4fwe"]
shader = ExtResource("3_sqfgb")
shader_parameter/enable = true
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_dov55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_isuaq"]
resource_name = "hitflash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7854f"]
_data = {
"RESET": SubResource("Animation_dov55"),
"hitflash": SubResource("Animation_isuaq")
}

[node name="turret" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_ovdhf")
ammo = ExtResource("2_purvd")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 5

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 7
visibility_layer = 7
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_d51hs")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_tey2p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_btdx2")
}
autoplay = "idle"

[node name="death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_srjnj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_v4fwe")
position = Vector2(-1, -1)
texture = ExtResource("3_17hku")
hframes = 32
vframes = 6
frame = 160

[node name="HitFlashAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7854f")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="death" to="." method="_on_death_body_entered"]
